<resources>
    <string name="hello">Hello World, Knitting Stash!</string>
    <string name="viewformtop">Knitting Needle Detail</string>
    <string name="app_name">Knitting Needles</string>
    <string name="home_app_name">Knitting Stash</string>
    <string name="home_app_name_beta">Knitting Stash Beta</string>
    <string name="list_app_name">Knitting Needles</string>
    <string name="view_app_name">View Needle Details</string>
    <string name="add_app_name">Add New Needle</string>
    <string name="edit_app_name">Edit Needle</string>
    <string name="list_hook_app_name">Hook Inventory</string>
    <string name="view_hook_app_name">View Hook Details</string>
    <string name="add_hook_app_name">Add New Hook</string>
    <string name="edit_hook_app_name">Edit Hook</string>
    <string name="list_project_app_name">Projects</string>
    <string name="view_project_app_name">View Project Details</string>
    <string name="add_project_app_name">Add New Project</string>
    <string name="edit_project_app_name">Edit Project Details</string>
    <string name="list_counter_app_name">Available Counters</string>
    <string name="view_counter_app_name">View Counter</string>
    <string name="add_counter_app_name">Add New Counter</string>
    <string name="edit_counter_app_name">Edit Counter Details</string>
    <string name="del_app_name">Delete Needle</string>
    <string name="crochet_button">Crochet Hooks</string>
    <string name="knit_button">Knitting Needles</string>
    <string name="counter_button">Counters</string>
    <string name="calc_button">Calculator</string>
    <string name="project_button">Projects</string>
    <string name="type">Type: </string>
    <string name="material">Material: </string>
    <string name="length">Length: </string>
    <string name="size">Size: </string>
    <string name="sort_size">Sort by size</string>
    <string name="sort_type">Sort by type</string>
    <string name="sort_in_use">Show Not In Use</string>
    <string name="notes_desc">Notes: </string>
    <string name="shopping_desc">Shopping needed: </string>
    <string name="empty_list">No needles found in stash.  Add with the menu button.</string>
    <string name="project_top_form">Create New Project</string>
    <string name="wood">wood</string>
    <string name="bamboo">bamboo</string>
    <string name="steel">steel</string>
    <string name="plastic">plastic</string>
	<string name="metal">metal</string>
    <string name="Wood">Wood</string>
    <string name="Bamboo">Bamboo</string>
    <string name="Steel">Steel</string>
    <string name="Plastic">Plastic</string>
    <string name="Metal">Metal</string>
	<string name="circular">circular</string>
    <string name="dpns">dpns</string>
    <string name="straight">straight</string>
    <string name="Circular">Circular</string>
    <string name="DPNs">DPNs</string>
    <string name="Straight">Straight</string>
    <string name="addformtop">Add Knitting Needle to Inventory</string>
    <string name="editformtop">Edit Knitting Needle</string>
    <string name="projectformtop">Project Details</string>
    <string name="add">Add Knitting Needle</string>
    <string name="update">Update Knitting Needle</string>
    <string name="update_hook">Update Hook</string>
    <string name="update_project">Update Project</string>
    <string name="update_counter">Update Counter</string>
	<string name="use_metric">Use Metric Size for Needles</string>
	<string name="metric_summary">Use metric knitting needle sizes instead of US sizes.</string>
	<string name="delete_dialog_title_hook">Delete Hook</string>
	<string name="delete_dialog_text_hook">Are you sure you want to delete this hook?</string>
	<string name="delete_dialog_title_needle">Delete Needle</string>
	<string name="delete_dialog_text_needle">Are you sure you want to delete this needle?</string>
	<string name="delete_dialog_title_counter">Delete Counter</string>
	<string name="delete_dialog_text_counter">Are you sure you want to delete this counter?</string>
	<string name="delete_dialog_title_project">Delete Project</string>
	<string name="delete_dialog_text_project">Are you sure you want to delete this project?</string>
	<string name="dialog_button_delete">Delete</string>
	<string name="dialog_button_cancel">Cancel</string>
    <string name="counter_activity_title">Counters</string>
    <string name="counter_add_title">Create a new Counter</string>
    <string name="counter_edit_title">Edit Counter</string>
	<string name="counter_view_title">View Counter</string>
	<string name="counter_name_label">Counter Name</string>
	<string name="counter_value_label">Counter Value</string>
	<string name="notes_label">Notes:</string>
	<string name="mode_label">Mode:</string>
	<string name="counter_add_button">Create Counter</string>
	<string name="counter_list_empty">No counters available.  Press menu to create one.</string>
	<string name="counter_update_button">Update Counter</string>
	<string name="counter_edit_button">Update Counter</string>
	<string name="hook_add_title">Create a new Hook</string>
	<string name="hook_name_label">Hook Name</string>
	<string name="hook_add_button">Create Hook</string>
	<string name="needle_add_title">Create a new Needle</string>
	<string name="needle_name_label">Needle Name</string>
	<string name="needle_add_button">Create Needle</string>
	<string name="hook_view_title">Crochet Hook Detail</string>
	<string name="project_add_title">Create a new Project</string>
	<string name="project_name_label">Project Name</string>
	<string name="project_status_label">Project Status:</string>
	<string name="project_photo_label">Project Photo:</string>
	<string name="project_update_photo_button">Update Photo</string>
	<string name="project_shopping_label">Shopping Needed:</string>
	<string name="project_add_button">Create Project</string>
	<string name="project_list_empty">No projects available.  Press menu to create one.</string>
	<string name="hook_list_empty">No hooks in stash, press menu to add some.</string>
	<string name="project_edit_title">Project Details</string>
	<string name="project_edit_button">Update Project</string>
	<string name="needles_in_use">Are the Needles in Use?</string>
	<string name="preferences_title">Set Knitting Stash Preferences</string>
	<string name="preferences_needle_size_label">Set Needle Size Preferences:</string>
	<string name="preferences_button">Update Preferences</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_need_shopping">Need Shopping</string>
	<string name="menu_view">View</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_add">Add</string>
	<string name="menu_update">Update</string>
	<string name="menu_view_project">View Project</string>
	<string name="menu_edit_project">Edit Project</string>
	<string name="menu_delete_project">Delete Project</string>
	<string name="menu_add_project">Add Project</string>
	<string name="menu_update_project">Update Project</string>
	<string name="menu_view_needle">View Needle</string>
	<string name="menu_edit_needle">Edit Needle</string>
	<string name="menu_delete_needle">Delete Needle</string>
	<string name="menu_add_needle">Add Needle</string>
	<string name="menu_update_needle">Update Needle</string>
	<string name="menu_view_hook">View Hook</string>
	<string name="menu_edit_hook">Edit Hook</string>
	<string name="menu_delete_hook">Delete Hook</string>
	<string name="menu_add_hook">Add Hook</string>
	<string name="menu_update_hook">Update Hook</string>
	<string name="menu_view_counter">View Counter</string>
	<string name="menu_edit_counter">Edit Counter</string>
	<string name="menu_delete_counter">Delete Counter</string>
	<string name="menu_add_counter">Add Counter</string>
	<string name="menu_reset_counter">Reset Counter</string>
	<string name="menu_update_counter">Update Counter</string>
	<string name="menu_in_use">In Use</string>
	<string name="menu_needle">Needle</string>
	<string name="menu_project">Project</string>
	<string name="menu_hook">Hook</string>
	<string name="menu_counter">Counter</string>
	<string name="menu_home">Home</string>
	<string name="menu_needed_shopping">Needed Shopping</string>
	<string name="menu_all_projects">Show All Projects</string>
	<string name="menu_unfinished_projects">Show Unfinished Projects</string>
	<string name="menu_shopping">Shopping: </string>
	<string name="increase">increase</string>
	<string name="decrease">decrease</string>
	<string name="switch_inc">Switch to Increment</string>
	<string name="switch_dec">Switch to Decrement</string>
	<string name="please_enter_number">Please enter a number.</string>
    <string name="prefs_edit_activity_title">Edit Preferences</string>
	<string name="prefs_needle_would">Would you like to see US sizes, Metric, or Both?</string>
    <string name="prefs_needle_option">Needle Size Option</string>
	<string name="prefs_needle_title">Knitting Needle Preferences</string>
        <string-array name="size_array">
        <item>US 00 / 1.75</item>
        <item>US 0 / 2</item>
        <item>US 1 / 2.25 </item>
        <item>US 1.5 / 2.5</item>
        <item>US 2 / 2.75</item>
        <item>US 2.5 / 3</item>
        <item>US 3 / 3.25</item>
        <item>US 4 / 3.5 </item>
        <item>US 5 / 3.75</item>
        <item>US 6 / 4 </item>
        <item>US 7 / 4.5</item>
        <item>US 8 / 5 </item>
        <item>US 9 / 5.5</item>
        <item>US 10 / 6 </item>
        <item>US 10.5 / 6.6</item>
        <item>7</item>
        <item>7.5</item>
        <item>US 11 / 8 </item>
        <item>US 13 / 9 </item>
        <item>US 15 / 10 </item>
        <item>US 17 / 12.75 </item>
        <item>US 19 / 15 </item>
        <item>US 35 / 19 </item>
        <item>US 50 / 25</item>
    </string-array>
        <string-array name="us_size_array">
        <item>US 00</item>
        <item>US 0</item>
        <item>US 1</item>
        <item>US 1.5</item>
        <item>US 2</item>
        <item>US 2.5</item>
        <item>US 3</item>
        <item>US 4</item>
        <item>US 5</item>
        <item>US 6</item>
        <item>US 7</item>
        <item>US 8</item>
        <item>US 9</item>
        <item>US 10</item>
        <item>US 10.5</item>
        <item>7mm</item>
        <item>7.5mm</item>
        <item>US 11</item>
        <item>US 13</item>
        <item>US 15</item>
        <item>US 17</item>
        <item>US 19</item>
        <item>US 35</item>
        <item>US 50</item>
    </string-array>
        <string-array name="metric_size_array">
        <item>1.75mm</item>
        <item>2mm</item>
        <item>2.25mm </item>
        <item>2.5mm</item>
        <item>2.75mm</item>
        <item>3mm</item>
        <item>3.25mm</item>
        <item>3.5mm</item>
        <item>3.75mm</item>
        <item>4mm </item>
        <item>4.5mm</item>
        <item>5mm </item>
        <item>5.5mm</item>
        <item>6mm </item>
        <item>6.6mm</item>
        <item>7mm</item>
        <item>7.5mm</item>
        <item>8mm </item>
        <item>9mm </item>
        <item>10mm </item>
        <item>12.75mm </item>
        <item>15mm </item>
        <item>19mm </item>
        <item>25mm </item>
    </string-array>
        <string-array name="needle_size_options">
        <item>US and Metric sizes</item>
        <item>US sizes only</item>
        <item>Metric sizes only</item>
        </string-array>
        <string-array name="needle_size_vals">
        <item>both</item>
        <item>us</item>
        <item>metric</item>
        </string-array>
</resources>