<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<TextView  
    android:text="@string/preferences_title"
    style="@style/FormTop"
    />
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/preferences_needle_size_label"
    />
<CheckBox
	  android:id="@+id/cb_metric"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:text="@string/use_metric"
     />
     
     <TextView
     android:id="@+id/tv_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      
     />
<Button  
	android:id="@+id/update_button"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/preferences_button"
    />
    

</LinearLayout>
