<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/widget54"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
<TextView  
android:id="@+id/top_label" 
	style="@style/FormTop"
    android:text="@string/projectformtop"
	android:layout_marginBottom="10dp"
    />
<TextView  
	android:id="@+id/name_label" 
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/project_name_label"
    android:layout_below="@id/top_label"
	/>
    <EditText	
	android:id="@+id/name"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/name_label"
	android:layout_marginBottom="10dp"
    />


<TextView
	android:id="@+id/image_label"    
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/project_photo_label"
    android:layout_below="@id/name"
    />
    <ImageView
	android:id="@+id/imagev"
	android:layout_width="100dp" 
    android:layout_height="100dp" 
    
    android:layout_below="@id/image_label"
    android:layout_alignLeft="@id/image_label"
	/>
<Button  
	android:id="@+id/photo_button"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/imagev"
    android:text="@string/project_update_photo_button"
    android:layout_marginBottom="10dp"
    />
    	
	
<TextView
	android:id="@+id/status_label"    
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/project_status_label"
    android:layout_below="@id/photo_button"
	/>

    <Spinner 
        android:id="@+id/spinner_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:layout_below="@id/status_label"
	    
    />
<TextView  
	android:id="@+id/notes_label"  
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/notes_desc"
	android:layout_below="@id/spinner_status"
	
        />
	<EditText
	android:id="@+id/notes"  
	style="@style/TextArea"
    android:layout_below="@id/notes_label"
    
	/>    
<TextView  
    android:id="@+id/shopping_label"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/shopping_desc"
    android:layout_below="@id/notes"
    
        />
    <EditText
    android:id="@+id/shopping"  
    android:layout_below="@id/shopping_label"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    
    />    
<Button  
	android:id="@+id/add_button"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/shopping"
    android:text="@string/project_edit_button"
    />
    

</RelativeLayout>
</ScrollView>