<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/widget55"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  
<TextView  
	android:id="@+id/top_label" 
	style="@style/FormTop"
    android:text="@string/counter_edit_title"
    />
<TextView
android:id="@+id/name_label"    
    android:layout_width="100dip" 
    android:layout_height="wrap_content" 
    android:text="@string/counter_name_label"
    android:layout_below="@id/top_label"
    android:layout_marginBottom="10px"
	
    />
	<EditText
	android:id="@+id/name"  
    android:layout_width="100dip" 
    android:layout_height="wrap_content" 
    android:layout_toRightOf="@id/name_label"
    android:layout_alignTop="@id/name_label"
    />

<TextView
android:id="@+id/curval_label"    
    android:layout_width="100dip" 
    android:layout_height="wrap_content" 
    android:text="@string/counter_value_label"
    android:layout_below="@id/name"
    android:layout_marginBottom="10px"
	
    />
	<EditText
	android:id="@+id/curval"  
    android:layout_width="100dip" 
    android:layout_height="wrap_content" 
    android:layout_toRightOf="@id/curval_label"
    android:layout_alignTop="@id/curval_label"
    android:inputType="number"
    />
<TextView  
	android:id="@+id/notes_label"  
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/notes_desc"
	android:layout_below="@id/curval"
	android:layout_marginBottom="5px"
	
        />
	<EditText
	android:id="@+id/notes"  
    style="@style/TextArea"
	android:layout_below="@id/notes_label"
    
	/>    

<Button  
	android:id="@+id/add_button"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/notes"
    
    android:text="@string/counter_edit_button"
    />
    

</RelativeLayout>
</ScrollView>
