<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  
<TextView  
	android:id="@+id/top_label" 
	style="@style/FormTop"
    android:text="Crochet Hook Detail"
    />
<TextView
android:id="@+id/size_label"    
    android:layout_width="80dip" 
    android:layout_height="wrap_content" 
    android:text="@string/size"
    android:layout_below="@id/top_label"
    android:layout_marginBottom="10px"
	
    />
	<TextView
	android:id="@+id/size"  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_toRightOf="@id/size_label"
    android:layout_alignTop="@id/size_label"
    />
    
<TextView
	android:id="@+id/material_label"    
    android:layout_width="80dip" 
    android:layout_height="wrap_content" 
    android:text="@string/material"
    android:layout_below="@id/size_label"
    android:layout_marginBottom="10px"
	/>
	<TextView
	android:id="@+id/material"  
    android:layout_width="80dip" 
    android:layout_height="wrap_content" 
    android:layout_toRightOf="@id/material_label"
    android:layout_alignTop="@id/material_label"
    />
<TextView  
	android:id="@+id/notes_label"  
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/notes_desc"
	android:layout_below="@id/material_label"
	android:layout_marginBottom="5px"
	
        />
	<TextView
	android:id="@+id/notes"  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/notes_label"
    
	/>    

</RelativeLayout>
