<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/widget55"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<TextView  
	android:id="@+id/top_form"
	style="@style/FormTop"
    android:text="@string/project_top_form"
    />
<TextView  
    android:id="@+id/name_label"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@+id/top_form"
    android:text="Project Name"
    />
 
<EditText
	android:id="@+id/name_field"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@+id/name_label"
    />
    <TextView
	android:id="@+id/status_label"    
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="Project Status: "
    android:layout_below="@+id/name_field"
	/>

    <Spinner 
        android:id="@+id/spinner_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:layout_below="@id/status_label"
	    
    />
<TextView  
	android:id="@+id/notes_label"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/notes_desc"
    android:layout_below="@+id/spinner_status"
    
    />
<EditText
	android:id="@+id/notes_field"  
    android:layout_below="@+id/notes_label"
   	style="@style/TextArea"
    />
<TextView  
    android:id="@+id/shopping_label"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/shopping_desc"
    android:layout_below="@+id/notes_field"
    
    />
<EditText
    android:id="@+id/shopping_field"  
    android:layout_below="@+id/shopping_label"
        android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    
    />
<Button  
	android:id="@+id/add_project_button"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@+id/shopping_field"
    android:text="Create Project"
    />
    

</RelativeLayout>
</ScrollView>